--- a/脚本/短編映画「ウェアラブル」台本.md
+++ b/脚本/短編映画「ウェアラブル」台本.md
@@ -2,53 +2,48 @@
 
 ## Scene 1 福井駅前
 
-### ○ニュース映像（昼）
+## ○福井駅前・外観（昼）
+**（佐藤の視点）**
+_出口を抜けると、突然巨大な恐竜の足が目の前に現れる。_
 
-_テレビのニュース映像。アナウンサーが画面に映る。_
+_佐藤、驚いて立ち止まる。_
 
-アナウンサー
-「福井県が誇るAR技術の集大成、福井ARフェスティバル2050まで、あと3日となりました。かつて眼鏡産業で栄えた福井県は、AR技術の発展により、今や世界有数の観光都市として生まれ変わりました」
-
-_映像が切り替わり、色とりどりのARアトラクションが並ぶ福井駅前の様子が映る。_
-
-アナウンサー（V.O.）
-「年間500万人が訪れる福井。今年のフェスティバルには、3日間で10万人の来場が予想されています。福井の新たな未来を象徴する、このビッグイベントに、全国から注目が集まっています」
-
-### ○福井駅前・ホログラムモニター（昼）
-
-_巨大なホログラムモニターに、先ほどのニュース映像が映し出されている。_
-
-### ○福井駅前・外観（昼）
-
-_巨大なホログラム恐竜が駅前広場を闊歩している。色とりどりのARサイネージが空中に浮かび、「福井ARフェスティバル2050まであと3日！」の文字が浮かぶ_
-
-観光客A
-「すごい！本当に恐竜がいるみたい！動きもリアルだし...」
+_見上げると、ティラノサウルスのホログラムが駅前広場を歩いている。_
 
 子ども
 「恐竜さん、こっち向いて〜！」
 
-父親
-「さすがジャパン・シリコンバレーだな」
+_子どもが手を振ると、恐竜が振り返って鳴く。_
+
+_佐藤、周囲を見回す。_
+
+_空中に浮かぶ道路標識。「福井城址→」_
+_信号機も立体的に光っている。_
 
 外国人観光客
-「Amazing! This is like living in the future!」
-（信じられない！まるで未来に住んでるみたい！）
+「Amazing!」
 
-観光客B
-「ホテルの予約もここからできるって！」
+_佐藤の前を通り過ぎる外国人観光客。手をかざすと、空中にホテル予約画面が現れる。_
 
-観光客C
-「道路標識や信号機まで...」
+外国人観光客
+「Two nights, please.」
 
-### ○福井駅前・人込み（昼）
+_予約が完了すると、道順を示す光の矢印が地面に現れる。_
 
-_人込みの中を、赤い眼鏡をかけた女性・佐藤美咲（20代後半）が歩いてくる。キャリーバッグを引いている。_
-_佐藤は周囲のARアトラクションを見回しながらも、歩みを止めない。_
+観光客A
+「すごい！道案内まで！」
+
+_佐藤、歩き始める。_
+
+_すれ違う人々の多くが、空中のメニューを操作している。_
 
 佐藤
 （独り言）
 「想像以上ね...」
+
+_佐藤、スマートフォンを取り出す。画面には「福井県庁まで徒歩12分」の表示。_
+
+_背景で、空中に「福井ARフェスティバル2050まであと3日！」の文字が踊る。_
 
 ## Scene 2 福井県庁
 ### ○ 庁舎内・応接室（昼）
@@ -131,14 +126,14 @@ _佐藤、画面から目を離さずに_
 「ずっと福井？」
 
 飯田
-「観光とかでは東京も行きますけど、まあ」
-「地元、好きなんで」
+「生まれも育ちも。昔は...」
+「眼鏡の街って言われてたんですけど」
 
 佐藤
-「今すごいもんね、駅前」
+「地場産業の技術転換...上手くいった例ね」
 
 飯田
-「そうなんです！あの恐竜とか、僕らが作ったシステムで動いてるの見てると」
+「駅前の恐竜とか、僕らが作ったシステムで動いてるの見てると」
 「なんか、嬉しくなっちゃって」
 
 佐藤
@@ -342,26 +337,58 @@ _佐藤、モニターを指差す。_
 佐藤
 「フェスティバル当日に10万人の観光客がいる中で、全ARシステムが暴走する。パニックが起きれば大惨事よ」
 
-_飯田、立ち上がる。_
+_飯田、画面を見つめたまま動かない。_
+
+_佐藤、飯田の様子に気づく。_
+
+佐藤
+「飯田君？」
+
+飯田
+「10万人...」
+
+_飯田、窓の外を見る。夜の福井の街灯。_
+
+_飯田、拳を握る。震えている。_
+
+_飯田、振り返る。目に涙。_
+
+飯田
+「みんな楽しみにしてるんです」
+
+_飯田、立ち上がる。椅子が倒れる。_
 
 飯田
 「ふざけるな！」
 
-_佐藤、椅子を引く。_
+_佐藤、驚いて立ち上がる。_
+
+_飯田、机を叩く。_
 
 飯田
-「僕らが何年もかけて作ってきたシステムを...福井の人たちが楽しみにしてるフェスティバルを...」
+「何の権利があって！」
 
 佐藤
 「飯田君、落ち着いて―」
 
 飯田
-「落ち着いてなんていられません！みんな楽しみにしてるんです。」
+「落ち着いてなんていられません！」
+
+_飯田、佐藤を見る。涙が頬を伝う。_
+
+飯田
+「いつも我慢してきたんだ」
+「『福井なんて何もない』って言われても、言い返せなかった」
+
+_飯田、窓を見る。_
+
+飯田
+「でも今回は違うって思ったんです。『福井もすごいでしょ』って、胸を張って言えるって」
 
 _飯田、拳を握りしめる。_
 
 飯田
-「犯人が誰だか分からないけど、絶対に―」
+「それを...それを―」
 
 佐藤
 「飯田和樹！」
@@ -395,22 +422,9 @@ _大山、電話を切る。_
 大山
 「いや、現場の技術者は体力を温存してくれ。明日からが本番だ」
 
-_大山、書類をまとめながら_
-
-大山
-「無理をしすぎるな。長丁場になりそうだ」
-
 _大山、執務室を出て行く。_
 
-飯田
-「部長、最近お疲れですね」
-
-佐藤
-「そうね...」
-
-_佐藤、大山が出て行ったドアを見つめる。
-沈黙。時計の秒針の音だけが響く。_
-
+_飯田、倒れた椅子を直す。_
 
 ## Scene 7 24時間営業のコンビニ
 ### ○コンビニ・イートインスペース（深夜）
@@ -422,280 +436,340 @@ _佐藤、コーヒーを飲む。飯田は俯いている。_
 飯田
 「さっきは...すみませんでした。感情的になって」
 
-佐藤
-「地元を想う気持ちは間違ってないわ」
-
-_佐藤、飯田を見つめる。_
+_沈黙。佐藤、窓の外を見つめる。_
 
 佐藤
-「ただ、その気持ちを正しい方向に向けないと。犯人を捕まえるのが一番の地元愛でしょう？」
+「飯田君」
 
 飯田
-「...そうですね」
+「はい」
+
+佐藤
+「地元愛って、どんな感じ？」
 
 _飯田、顔を上げる。_
 
 飯田
-「佐藤さんって、いつも冷静ですよね。こういう状況でも」
+「どんな感じって...」
 
-佐藤
-「そう見える？実は結構動揺してるのよ」
-
-_窓の外を見る佐藤。_
-
-佐藤
-「でも、あなたみたいに地元を大切に思える人、羨ましいわ」
+_飯田、窓の外を見る。夜の福井の街並み。街灯がぽつぽつと点いている。_
 
 飯田
-「佐藤さんは地元、ないんですか？」
+「特別なことじゃないです。朝、同じ道を通って。夜、同じ道を帰る」
 
-佐藤
-「転勤族の子供だから...どこが故郷なのかよく分からない」
-
-_佐藤、コーヒーカップを両手で包む。_
-
-佐藤
-「小学校3回、中学校2回転校して。友達作るのも、いつかお別れが来るって分かってるから」
+_佐藤、じっと飯田を見つめる。_
 
 飯田
-「それは...寂しいですね」
+「コンビニで会う人も、だいたい同じ。『お疲れさま』って」
+
+_佐藤、自分のコーヒーカップを両手で包む。_
 
 佐藤
-「慣れたつもりだったけど、こうして飯田君が地元を大切に思ってるのを見ると...」
+「それだけ？」
 
-_佐藤、窓の外を見つめる。_
+飯田
+「それだけです」
+
+_長い沈黙。_
+
+_佐藤、窓ガラスに指先で何かを描くような仕草をする。でも何も描かない。_
 
 佐藤
-「どこにいても、結局は通りすがりの人間」
+「私、それが欲しかった」
+
+_飯田、佐藤を見る。_
 
 佐藤
-「だからかな、こういう事件を見ると...色々考えてしまう」
+「毎日通る道。毎日会う人。『お疲れさま』って言ってくれる人」
 
-飯田
-「考えてしまう？」
-
-佐藤
-「こんなに素敵な街を、なぜ誰かが攻撃しようとするのかって」
-
-_飯田、頷く。_
-
-飯田
-「本当に...許せません」
+_佐藤、窓の外をじっと見つめる。_
 
 佐藤
-「そういえば...」
+「転勤族の子供だから...どこにいても、いつかお別れが来るって分かってる」
+
+_飯田、何も言わない。_
 
 佐藤
-「あの脅迫メッセージ、妙に具体的だったわね？」
+「だから、こういう事件を見ると...」
 
-飯田
-「5億2300万円...確かに中途半端な数字ですね」
-
-佐藤
-「もっとキリの良い数字にしそうなのに」
-「まるで、その金額に特別な意味があるみたい」
-
-飯田
-「特別な意味...」
-
-_飯田、はっとする。_
-
-飯田
-「あ！これって、リベラさんが言ってた総事業費ですよね」
+_佐藤、振り返る。_
 
 佐藤
-「AR事業の？」
+「なぜ誰かが、あなたの持ってるものを壊そうとするのか、理解したくなる」
 
-飯田
-「そうです。5億2300万円って、この街がAR技術に投資した金額そのものじゃないですか」
+_窓の外で、街灯が一つ消える。_
 
-佐藤
-「ということは...」
-
-飯田
-「犯人の動機って、お金じゃないんじゃないかな」
-
-_飯田、真剣な表情になる。_
-
-飯田
-「この金額を選んだってことは...AR事業そのものに対する、何かのメッセージなんじゃないかと」
+_二人、沈黙でコーヒーを飲む。_
 
 佐藤
-「なるほど...抗議の意味で」
+「犯人も、きっと...」
 
 飯田
-「もしそうだとしたら、犯人は...」
-
-_飯田、考え込む。_
-
-飯田
-「この街の変化を、複雑な思いで見てる人かもしれません」
+「きっと？」
 
 佐藤
-「地元の人間...」
+「きっと、同じものを求めてる」
 
-飯田
-「それも、昔の福井を知ってる人」
+_外で夜勤の人が自転車で通り過ぎていく。飯田が軽く手を振る。その人も軽く手を振り返す。_
 
-_二人、沈黙。_
+_佐藤、その様子を見つめる。_
 
-飯田
-「でも、この仮定が正しいとしたら...」
+## Scene 8 ホログラファイ・システムズ社内（修正版）
+### ○社内・執務室（13年前・昼）
 
-佐藤
-「そう、その仮定が正しいとしたら...」
+_若い大山が、ARシステムのデモ画面を操作している。画面には福井城の復元映像が浮かんでいる。_
 
-_二人、視線を合わせる。_
-_二人、コーヒーを飲み干す。_
-
-## Scene 8 ホログラファイ・システムズ社内
-### ○社内・執務室（15年前・昼）
+_リベラが後ろで見守っている。_
 
 大山
-「このARオーバーレイで、福井の歴史を重ねて表示できます。ここに立つと、昔の城下町の様子が見えるんです」
+「ここに立つと、昔の城下町の様子が見えるんです」
+
+_大山、画面を指差す。そこには武家屋敷が立ち並ぶ江戸時代の福井。_
 
 リベラ
-「素晴らしい技術ですね、大山さん。あなたのようなエンジニアがいてくれて助かります」
+「素晴らしい技術ですね、大山さん」
+
+_大山、嬉しそうに頷く。_
 
 大山
-「福井の本当の魅力を、技術で伝えることができる。これまでやってきた開発の集大成です」
+「福井の本当の魅力を、技術で伝えることができる」
+
+_大山、画面の中の城下町を見つめる。_
+
+大山
+「これまでやってきた開発の集大成です」
 
 リベラ
 「伝統と技術の融合。まさに福井らしいアプローチです」
 
+_大山、振り返る。目が輝いている。_
+
 大山
 「観光客の人たちにも、福井の深い歴史を知ってもらえるはずです」
 
+_リベラ、微笑む。_
+
+リベラ
+「あなたのようなエンジニアがいてくれて助かります」
+
+
+### ○社内・執務室（5年前・夕）
+
+_同じ執務室。大山が疲れた表情でモニターを見つめている。_
+
+_画面には恐竜のARアトラクションの企画書。「来場者数前年比150％」の文字。_
+
+_リベラが資料を持って入ってくる。_
+
+リベラ
+「大山部長、観光客のデータを見てください」
+
+_リベラ、資料を机に置く。_
+
+リベラ
+「恐竜とARアトラクションの人気が圧倒的です」
+
+_大山、資料を見る。複雑な表情。_
+
+大山
+「ああ、まあ、そうですね」
+
+リベラ
+「数字が全てを物語っています。予算配分も、効果の高い分野に集中すべきです」
+
+_大山、かつて作った城下町の復元データが画面の隅に小さく表示されているのを見る。_
+
+大山
+「でも、福井の歴史を伝える部分も...」
+
+リベラ
+「もちろん大切です。ただ、優先順位を考えて」
+
+_大山、頷く。しかし表情は暗い。_
+
+大山
+「...分かりました」
 
 ## Scene 9 足羽川・ベンチ
 ### ○足羽川沿いのベンチ（昼）
-_大山、川を見つめている。_
 
-美咲
+_大山、川を見つめている。ベンチに深く座り込んでいる。_
+
+佐藤
 「部長、何してるんですか、こんなところで」
-
-_大山、振り返る。_
-
-大山
-「君こそ、調査の方は―」
-
-美咲
-「福井ARフェスティバルは中止になりました」
-
-大山
-「何...？」
-
-_インサート：閑散とした福井駅前_
-_インサート：駅前のベンチに横たわる飯田_
-
-美咲(OFF)
-「リベラさんの判断です。セキュリティリスクが高すぎると」
-
-大山
-「中止に...」
-
-美咲
-「今、街では手動での対応が始まってます。」
-
-_インサート：手旗信号をする職員_
-_インサート：仮設の道路標識を設置する職員_
-
-美咲(OFF)
-「意外と皆さん、普通に生活されてます。」
-
-_大山、川を見つめる。_
-
-大山
-「そうか...」
-
-美咲
-「部長」
-
-_美咲、大山に近づく。_
-
-美咲
-「あなたでしたね」
 
 _大山、振り返らない。_
 
 大山
-「証拠があるのか？」
+「君こそ、調査の方は―」
 
-美咲
-「13年前のシステム開発時のアクセスログと、今回の侵入手法が一致しています。あなたにしか知り得ない脆弱性を使用している」
+佐藤
+「福井ARフェスティバルは中止になりました」
 
-_大山、深くため息をつく。_
-
-大山
-「あの頃は...純粋だった」
-
-美咲
-「13年前の回想を、見せていただきました」
+_大山、わずかに肩を落とす。_
 
 大山
-「回想？」
+「...そうか」
 
-美咲
-「システムログに、あなたの想いが記録されていました。福井の歴史を伝えたい、技術で故郷に貢献したい...」
+_インサート：閑散とした福井駅前_
+_インサート：駅前のベンチに横たわる飯田_
 
-_大山、ベンチに座り直す。_
+佐藤
+「リベラさんの判断です。セキュリティリスクが高すぎると」
 
-大山
-「だが、現実は違った。派手なアトラクションばかりが注目されて、福井の本当の魅力は...」
+佐藤
+「今、街では手動での対応が始まってます」
 
-美咲
-「それでも、犯罪は許されません。不正アクセス禁止法違反、威力業務妨害罪、恐喝未遂罪...複数の罪に問われることになります」
+_インサート：手旗信号をする職員_
+_インサート：仮設の道路標識を設置する職員_
 
-_大山、頷く。_
-
-大山
-「分かっている。でも、どうしても我慢できなかった」
-
-美咲
-「リベラさんのような、部外者が仕切ることが？」
+佐藤
+「意外と皆さん、普通に生活されてます」
 
 大山
-「最初はそうだと思っていた。でも...違った」
+「...そうだろうな」
+
+_佐藤、慎重に近づく。_
+
+佐藤
+「あなたでしたね」
+
+_大山、わずかに肩を震わせる。_
+
+大山
+「...証拠があるのか？」
+
+佐藤
+「13年前のシステム開発時のアクセスログと、今回の侵入手法が一致しています」
+
+_大山、深く息をつく。_
+
+大山
+「そうか...」
+
+佐藤
+「あなたにしか知り得ない脆弱性を使用している」
+
+_大山、ベンチに座り込む。_
+
+大山
+「で、それで...君は何をしに？」
+
+佐藤
+「不正アクセス禁止法違反、威力業務妨害罪、恐喝未遂罪。複数の罪に問われることになります」
+
+大山
+「...分かってる」
+
+_佐藤、大山の隣に座る。_
+
+佐藤
+「5億2300万円。AR事業の総予算です」
+
+大山
+「よく調べたな」
+
+佐藤
+「当てつけですね。お金が目的ではない」
 
 _大山、川面を見つめる。_
 
 大山
-「リベラさんは、実は誰よりも福井のことを考えている。今日の判断を見ても分かる」
+「...そうだな」
 
-美咲
-「では、何が？」
+佐藤
+「飯田君が言ってました。『福井もすごいでしょって、胸を張って言えると思った』って」
+
+_大山、顔をこわばらせる。_
 
 大山
-「自分が取り残されることが怖かった。13年前に作ったシステムが、自分の知らないところで進化して...自分がいなくても回っていく」
+「あいつは...純粋だ」
+
+佐藤
+「あなたも、13年前は同じだったんじゃないですか」
+
+大山
+「それは...違う」
+
+佐藤
+「城下町の復元。福井の歴史を伝えたい」
+
+_大山、頭を抱える。_
+
+大山
+「結局、私もARに頼ってた。技術で『魅力』を作ろうとしてた」
+
+大山
+「恐竜アトラクションを批判してたが、俺も同じだった。同じ穴のムジナだ」
+
+佐藤
+「でも、あなたは気づいた」
+
+大山
+「...何に？」
+
+佐藤
+「自分の矛盾に。」
+
+_沈黙。_
+
+佐藤
+「私には、その矛盾も羨ましいです」
+
+_大山、佐藤を見る。_
+
+大山
+「どういう意味だ？」
+
+佐藤
+「故郷がないから」
+
+_沈黙。_
+
+佐藤
+「それが羨ましい」
+
+_佐藤、声が震える。_
+
+大山
+「君は...」
+
+佐藤
+「だから理解したいんです」
+
+_大山、深く息をつく。_
+
+大山
+「自分が取り残されることが怖かった」
+
+_大山、ようやく本音を吐く。_
+
+大山
+「13年前に作ったシステムが、自分の知らないところで進化して...自分がいなくても回っていく」
 
 _大山、手を握りしめる。_
 
 大山
-「技術者としての誇りか、それともただの嫉妬か...もう分からない」
+「技術者としての誇りか、ただの嫉妬か...もう分からない」
 
-大山
-「それだけじゃない。技術に依存しすぎて、県民が現実を見なくなることが怖かった」
+_佐藤、大山を見つめる。_
 
-_美咲、大山の隣に座る。_
+佐藤
+「でも、あなたには故郷がある」
 
-美咲
-「でも今日、県民の皆さんは普通に生活してます。ARがなくても」
+_大山、佐藤を見る。_
 
-大山
-「皮肉なものだな...私が望んでいた結果が、こんな形で実現するなんて」
+佐藤
+「あなたが羨ましい。故郷を愛せることが。たとえ間違った方法でも」
 
-大山
-「5億2300万円。この街が技術に注ぎ込んだ金額だ。それだけの価値が、本当にあったのか問いたかった」
+_大山、深く頭を下げる。_
 
-_遠くでパトカーのサイレンが聞こえる。_
+_二人、しばらく沈黙。_
 
 大山
 「ありがとう、美咲君。君は...正しい判断をしてくれた」
 
-_大山、立ち上がる。_
-
-美咲
-「部長...」
+_サイレンの音が近づいてくる。_
 
 ## Scene 10 ニュース映像
 ### ○テレビのニュース映像
