Add script for short film "Wearable" including scenes and dialogues

--- a/短編映画「ウェアラブル」- 全体コンセプトと構成.md
+++ b/短編映画「ウェアラブル」- 全体コンセプトと構成.md
@@ -1,121 +1,146 @@
-# 短編映画「ウェアラブル」- 全体コンセプトと構成
+# 短編映画「ウェアラブル」コンセプト・構成資料
 
 ## 作品概要
 
 ### 基本情報
 - **タイトル**: ウェアラブル
-- **ジャンル**: サイバーサスペンス / 社会派ドラマ
-- **舞台**: 2050年の福井県（AR技術で発展した未来都市）
+- **ジャンル**: SF・サイバーサスペンス・ヒューマンドラマ
+- **時代設定**: 2050年
+- **舞台**: 福井県（福井市中心）
 
-### 中核テーマ
-**「技術の進歩と人間性の調和」**
-- 技術発展の光と影
-- 故郷の変化への複雑な感情
-- 理想と現実のギャップ
-- 技術依存からの脱却
+### ログライン
+2050年の福井県で、全県規模のAR技術「SiLeX Glass」がサイバー攻撃を受ける中、東京から派遣されたセキュリティ専門家と地元の技術者が、犯人の正体と真の動機を探る物語。
 
-## ストーリー構成
+## 作品のコンセプト
 
-### 三幕構成
-```
-第一幕: 設定提示と事件発生 (Scene 1-4)
-第二幕: 調査と真相究明 (Scene 5-8)
-第三幕: 解決と和解 (Scene 9-11)
-```
+### 中心テーマ
+**「技術と人間の距離感」**
+- テクノロジーは人間を幸せにするのか
+- 技術革新と地域アイデンティティの関係
+- デジタル化社会における「本物」の価値
 
-### 物語の流れ
+### サブテーマ
+1. **地域愛の本質** - 「毎日通る道、毎日会う人」という日常の価値
+2. **技術者の理想と現実** - 開発者の想いと商業化の狭間
+3. **帰属意識** - 故郷を持つ者と持たない者の対比
+4. **多様性と融和** - 異なる背景を持つ人々の協働
 
-#### 第一幕: 導入部
-1. **世界観の提示** - 2050年のAR都市・福井
-2. **登場人物の紹介** - 佐藤美咲の到着、チームの結成
-3. **事件の発生** - ARシステムの暴走と脅迫メッセージ
+### 現代的な問題意識
+- 地方創生とDX推進の課題
+- サイバーセキュリティの重要性
+- 技術依存社会のリスク
+- グローバル化と地域文化の両立
 
-#### 第二幕: 展開部
-4. **調査の開始** - 技術的な分析と人間関係の探求
-5. **過去の回想** - 大山の理想と挫折の歴史
-6. **真相への接近** - 内部犯行の可能性の浮上
+## 世界観設定
 
-#### 第三幕: 結末部
-7. **真相の発覚** - 大山の犯行と動機の解明
-8. **和解と受容** - 犯人の自白と責任の受け入れ
-9. **新しい出発** - AR事業の縮小と持続可能な未来への転換
+### 2050年の福井県
+**「SiLeX Glass」システム**
+- 全県民に配布されたウェアラブルAR端末
+- 都市インフラと連携した生活支援システム
+- 観光、交通、商業を統合したスマートシティ基盤
+- 総事業費152億3000万円の大型プロジェクト
+
+**技術的特徴**
+- ホログラム表示による観光コンテンツ（恐竜、歴史再現）
+- AR信号機・道路標識による交通システム
+- 多言語対応による国際観光対応
+- 眼鏡産業の技術を活用した光学システム
+
+### 福井の特色活用
+- **歴史**: 一乗谷朝倉氏遺跡、福井城址
+- **産業**: 眼鏡産業からウェアラブル技術への転換
+- **文化**: 越前和紙、越前そば、越前がに
+- **自然**: 足羽川の桜、九頭竜川、越前海岸
 
 ## キャラクター構成
 
-### 各キャラクターの機能
-- **佐藤美咲**: 客観的な視点と問題解決能力
-- **飯田和樹**: 地域の心情と技術への愛着
-- **大山智久**: 理想の挫折と犯行の動機
-- **アナ・リベラ**: 権威と責任、最終的な判断
+### 4人の主要キャラクター
 
-## 映像的コンセプト
+#### 佐藤美咲（32歳）- 主人公
+- **役割**: 外部視点・探偵役
+- **背景**: 転勤族、セキュリティ専門家
+- **内面**: 「故郷」への憧れ、論理的思考
+- **成長**: 地域愛の理解、感情表現の獲得
 
-### 視覚的対比
-```
-過去 (温かみのある色調) ←→ 現在 (クールなデジタル色調)
-理想 (柔らかな光) ←→ 現実 (鋭い光とシルエット)
-技術 (人工的な美しさ) ←→ 人間性 (自然な表情と動作)
-```
+#### 飯田和樹（28歳）- 地元代表
+- **役割**: 地域愛の体現者
+- **背景**: 生粋の福井人、技術者
+- **内面**: 純粋な郷土愛、技術への情熱
+- **成長**: 冷静な判断力、責任感の自覚
 
-### 象徴的な要素
-- **赤い眼鏡**: 技術者のアイデンティティと変化
-- **ホログラム恐竜**: 福井の象徴と技術の暴走
-- **光のシルエット**: 権威と威圧感
-- **川面の静寂**: 真実との対峙
+#### 大山智久（48歳）- 犯人・技術者
+- **役割**: 悲劇的な対立者
+- **背景**: 13年間のシステム開発者
+- **内面**: 理想と現実のギャップ、技術者の矜持
+- **動機**: 県民の技術依存への警鐘
 
-## 社会的メッセージ
+#### アナ・リベラ（35歳）- 行政責任者
+- **役割**: 危機管理者、多様性の象徴
+- **背景**: フィリピン出身の県庁職員
+- **内面**: 国際的視野、強いリーダーシップ
+- **機能**: 冷静な判断、プロジェクト統括
 
-### 主要テーマ
-1. **技術進歩の両面性**
-   - 便利さの享受と依存のリスク
-   - 創造者と利用者の乖離
+## 構成分析
 
-2. **地域開発の複雑さ**
-   - 伝統と革新のバランス
-   - 外部視点と内部感情の対立
+### 三幕構成
 
-3. **人間関係の再構築**
-   - 世代間の価値観の違い
-   - 多様な背景を持つ人々の協働
+#### 第一幕：導入（Scene 1-3）
+- **設定紹介**: 2050年の福井AR社会
+- **事件の予兆**: 不審なアクセス調査
+- **キャラクター関係**: 佐藤・飯田・大山の関係性構築
 
-### 現代的な問題提起
-- AI・AR技術の急速な発展
-- 地方創生と文化継承
-- グローバル化と地域アイデンティティ
-- 技術者の疎外感と責任
+#### 第二幕：展開（Scene 4-9）
+- **事件発生**: 駅前ARシステム暴走
+- **調査深化**: 犯人の手口解明
+- **感情の爆発**: 飯田の郷土愛、佐藤の孤独感吐露
+- **真相に迫る**: 大山の内面描写（回想）
 
-## 構造的工夫
+#### 第三幕：解決（Scene 10-12）
+- **犯人特定**: 佐藤による推理
+- **動機の解明**: 足羽川での対峙
+- **事件の決着**: 大山の逮捕、システム再開
+- **新たな出発**: 佐藤と飯田の継続的協力関係
 
-### 時間構成
-- **リアルタイム**: 事件発生から解決まで約48時間
-- **回想シーン**: 13年前、5年前、半年前の三段階
-- **対比効果**: 過去の理想と現在の現実
+### 感情の流れ
+1. **好奇心** → AR技術への驚き
+2. **緊張** → システム暴走の恐怖
+3. **困惑** → 犯人の動機への疑問
+4. **共感** → 各キャラクターの内面理解
+5. **カタルシス** → 真相解明と和解
 
-### 空間構成
-- **公共空間**: 駅前広場（技術の象徴）
-- **密室空間**: 会議室・執務室（権力関係）
-- **中間空間**: コンビニ・川辺（人間的な対話）
+## 映像的特徴
 
-### 情報開示
-- **段階的な真相究明**
-- **技術的な手がかり**と**人間的な洞察**の両軸
-- **犯人の動機**の多層的な提示
+### 視覚的コンセプト
+- **リアル vs バーチャル**: AR映像と現実の対比
+- **伝統と革新**: 福井の歴史的建造物と未来技術
+- **色彩設計**: 暖色（人間らしさ）vs 寒色（技術）
 
-## 演出上の特徴
+### 象徴的な映像
+- **恐竜のホログラム**: 技術の象徴、子供の純真さ
+- **赤い眼鏡**: 佐藤の変化、技術と人間の接点
+- **足羽川**: 変わらない自然、人生の流れ
+- **コンビニの蛍光灯**: 現代の孤独、都市の温もり
 
-### 映像技術の活用
-- ARアトラクションの迫力ある描写
-- システムログの視覚化
-- 光と影を使った心理表現
+## メッセージ性
 
-### 音響設計
-- 都市の騒音と自然の静寂の対比
-- システム音とアラーム音の効果的使用
-- 静寂の瞬間の重要性
+### 直接的メッセージ
+- 技術は手段であり、目的は人間の幸福である
+- 地域愛は排他的でなく、共感的なものである
+- 多様な背景を持つ人々の協働が社会を発展させる
 
-### 演技指導
-- 各キャラクターの価値観の明確な差別化
-- 技術的な専門性の説得力ある表現
-- 感情の機微の丁寧な描写
+### 間接的メッセージ
+- デジタル化社会における人間関係の重要性
+- 技術者の社会的責任
+- 地方創生における本質的価値の探求
 
+## 製作上の特徴
 
+### 技術的挑戦
+- ARシステムの映像表現
+- 未来の福井の街並み描写
+- リアルタイム映像とCG映像の統合
+
+### 地域性の活用
+- 福井の実在する場所でのロケーション
+- 地域産業（眼鏡）の技術的背景
+- 方言や地域文化の自然な描写
