--- a/脚本/短編映画「ウェアラブル」台本_第二稿.md
+++ b/脚本/短編映画「ウェアラブル」台本_第二稿.md
@@ -88,7 +88,7 @@ _リベラ、頷く。_
 リベラ
 「あなた方ホログラファイ・システムズには、今回のフェスティバル成功のために、特別な責任があります」
 _リベラ、ソファから立ち上がる_
-「県と民間が手を取り合って築き上げたこのAR事業、総事業費5億2300万円の集大成がこのフェスティバルなのですから」
+「県と民間が手を取り合って築き上げたこのAR事業、『SiLeX Glass』の開発費を含む総事業費152億3000万円の集大成がこのフェスティバルなのですから」
 
 リベラ
 「ですから大山部長、開発主任の飯田さん、そしてセキュリティリーダーの佐藤さん。」
@@ -97,7 +97,7 @@ _リベラ、ソファから立ち上がる_
 _日光が差し込みリベラのシルエットが強調される_
 
 ## Scene 3 ホログラファイ・システムズ社内
-###  ○社内・執務室（昼）
+### ○社内・執務室（昼）
 
 佐藤
 「不審なアクセスの調査、ねぇ」
@@ -178,7 +178,6 @@ _佐藤、画面を見つめる_
 
 _大山、わずかに顔をこわばらせる。_
 
-
 ## Scene 4 福井駅前・人込み
 ### ○福井駅前・外観（夕）
 
@@ -192,7 +191,8 @@ _横断歩道のAR信号が赤と青を激しく点滅し始める。_
 _AR道路標識も文字が崩れる。_
 
 観光客F
-「なんだよこれ...」
+（スマートグラスを外しながら）
+「なんだよこれ...眼鏡が壊れた？」
 
 _車が困惑してクラクションを鳴らす。_
 
@@ -237,10 +237,10 @@ _続けて文字が現れる。_
 
 _最後の文字が現れる。_
 
-**「止めたければ5億2300万円用意しろ」**
+**「止めたければ152億3000万円用意しろ」**
 
 観光客J
-「5億円？！」
+「150億円？！」
 
 _ホログラム恐竜が突然雄叫びを上げる_
 _耳をつんざくような不協和音_
@@ -259,7 +259,7 @@ _一部の観光客が逃げ出す。_
 _警備員が無線で連絡を取る。_
 
 警備員
-「本部、本部、駅前広場で異常発生。ARシステムに不具合が...」
+「本部、本部、駅前広場で異常発生。SiLeXシステムに不具合が...全県規模の可能性があります」
 
 _すべてのARサイネージが一斉に正常に戻る。_
 
@@ -291,7 +291,8 @@ _リベラが部屋の中央に立ち、指示を出している。_
 「警察との連携は？」
 
 県職員A
-「サイバー犯罪対策課と連絡を取っています」
+（スマートグラスで資料を確認しながら）
+「サイバー犯罪対策課と連絡を取っています。SiLeXシステムの全県ネットワークへの影響を調査中です」
 
 リベラ
 「報道対応は私が行います。住民への安全確保を最優先に」
@@ -510,266 +511,121 @@ _二人、沈黙でコーヒーを飲む。_
 佐藤
 「きっと、同じものを求めてる」
 
-_外で夜勤の人が自転車で通り過ぎていく。飯田が軽く手を振る。その人も軽く手を振り返す。_
-
-_佐藤、その様子を見つめる。_
-
-## Scene 8 ホログラファイ・システムズ社内（修正版）
+## Scene 8 ホログラファイ・システムズ社内
 ### ○社内・執務室（13年前・昼）
 
-_若い大山が、ARシステムのデモ画面を操作している。画面には福井城の復元映像が浮かんでいる。_
+_13年前。同じ執務室だが、古いブラウン管モニターとキーボードが並んでいる。_
 
-_リベラが後ろで見守っている。_
+_若い大山（35歳）が一人でコードを書いている。_
 
-大山
-「ここに立つと、昔の城下町の様子が見えるんです」
+_大山、画面に向かって集中している。手元にはメモ帳。「福井の魅力を伝えるシステム設計書」と書かれている。_
 
-_大山、画面を指差す。そこには武家屋敷が立ち並ぶ江戸時代の福井。_
+_大山、ふと手を止める。窓の外を見る。_
 
-リベラ
-「素晴らしい技術ですね、大山さん」
+_窓の外には建設中の福井駅前。工事現場の向こうに見える古い商店街。_
 
-_大山、嬉しそうに頷く。_
+_大山、メモ帳をめくる。「足羽川の桜」「一乗谷朝倉氏遺跡」「越前和紙」「越前そば」などの文字が見える。_
 
-大山
-「福井の本当の魅力を、技術で伝えることができる」
+_大山、再びキーボードに手を置く。_
 
-_大山、画面の中の城下町を見つめる。_
-
-大山
-「これまでやってきた開発の集大成です」
-
-リベラ
-「伝統と技術の融合。まさに福井らしいアプローチです」
-
-_大山、振り返る。目が輝いている。_
-
-大山
-「観光客の人たちにも、福井の深い歴史を知ってもらえるはずです」
-
-_リベラ、微笑む。_
-
-リベラ
-「あなたのようなエンジニアがいてくれて助かります」
-
-
-### ○社内・執務室（5年前・夕）
-
-_同じ執務室。大山が疲れた表情でモニターを見つめている。_
-
-_画面には恐竜のARアトラクションの企画書。「来場者数前年比150％」の文字。_
-
-_リベラが資料を持って入ってくる。_
-
-リベラ
-「大山部長、観光客のデータを見てください」
-
-_リベラ、資料を机に置く。_
-
-リベラ
-「恐竜とARアトラクションの人気が圧倒的です」
-
-_大山、資料を見る。複雑な表情。_
-
-大山
-「ああ、まあ、そうですね」
-
-リベラ
-「数字が全てを物語っています。予算配分も、効果の高い分野に集中すべきです」
-
-_大山、かつて作った城下町の復元データが画面の隅に小さく表示されているのを見る。_
-
-大山
-「でも、福井の歴史を伝える部分も...」
-
-リベラ
-「もちろん大切です。ただ、優先順位を考えて」
-
-_大山、頷く。しかし表情は暗い。_
-
-大山
-「...分かりました」
+_画面にはプログラムコード。コメント行に「// 福井の歴史を後世に伝える」と書かれている。_
 
 ## Scene 9 足羽川・ベンチ
 ### ○足羽川沿いのベンチ（昼）
 
-_大山、川を見つめている。ベンチに深く座り込んでいる。_
+_大山、川を見つめている。_
 
 佐藤
-「部長、何してるんですか、こんなところで」
+「部長」
 
-_大山、振り返らない。_
-
-大山
-「君こそ、調査の方は―」
-
-佐藤
-「福井ARフェスティバルは中止になりました」
-
-_大山、わずかに肩を落とす。_
-
-大山
-「...そうか」
-
-_インサート：閑散とした福井駅前_
-_インサート：駅前のベンチに横たわる飯田_
-
-佐藤
-「リベラさんの判断です。セキュリティリスクが高すぎると」
-
-佐藤
-「今、街では手動での対応が始まってます」
-
-_インサート：手旗信号をする職員_
-_インサート：仮設の道路標識を設置する職員_
-
-佐藤
-「意外と皆さん、普通に生活されてます」
-
-大山
-「...そうだろうな」
-
-_佐藤、慎重に近づく。_
+_美咲、大山に近づく。_
 
 佐藤
 「あなたでしたね」
 
-_大山、わずかに肩を震わせる。_
+_大山、振り返らない。_
 
 大山
-「...証拠があるのか？」
+「証拠があるのか？」
 
 佐藤
-「13年前のシステム開発時のアクセスログと、今回の侵入手法が一致しています」
+「13年前のシステム開発時のアクセスログと、今回の侵入手法が一致しています。あなたにしか知り得ない脆弱性を使用している」
 
-_大山、深く息をつく。_
+_大山、深くため息をつく。_
+
+佐藤
+「13年前の回想を、見せていただきました」
+
+大山
+「回想？」
+
+佐藤
+「システムログに、あなたの想いが記録されていました。福井の歴史を伝えたい、眼鏡産業の技術で故郷に貢献したい...」
+
+_大山、ベンチに座り直す。_
+
+大山
+「だが、現実は違った。『SiLeX Glass』は派手なアトラクションの表示装置になり下がって、福井の本当の魅力は...」
+
+佐藤
+「福井ARフェスティバルは中止になりました」
+
+大山
+「何...？」
+
+_インサート：閑散とした福井駅前_
+_インサート：駅前のベンチに横たわる飯田_
+
+美咲(OFF)
+「リベラさんの判断です。セキュリティリスクが高すぎると」
+
+大山
+「中止に...」
+
+佐藤
+「今、街では手動での対応が始まってます。」
+
+_インサート：手旗信号をする職員_
+_インサート：仮設の道路標識を設置する職員_
+
+佐藤(OFF)
+「意外と皆さん、普通に生活されてます。」
+
+_大山、川を見つめる。_
 
 大山
 「そうか...」
 
-佐藤
-「あなたにしか知り得ない脆弱性を使用している」
-
-_大山、ベンチに座り込む。_
-
 大山
-「で、それで...君は何をしに？」
+「県民がウェアラブル端末に依存しすぎて、現実を見なくなることが怖かった。」
+「152億3000万円。この街がウェアラブル技術に注ぎ込んだ金額だ。それだけの価値が、本当にあったのか問いたかった」
+
+_美咲、大山の隣に座る。_
 
 佐藤
-「不正アクセス禁止法違反、威力業務妨害罪、恐喝未遂罪。複数の罪に問われることになります」
+「でも今日、県民の皆さんは普通に生活してます。SiLeXシステムがなくても」
 
 大山
-「...分かってる」
-
-_佐藤、大山の隣に座る。_
-
-佐藤
-「5億2300万円。AR事業の総予算です」
+「皮肉なものだな...私が望んでいた結果が、こんな形で実現するなんて」
 
 大山
-「よく調べたな」
-
-佐藤
-「当てつけですね。お金が目的ではない」
-
-_大山、川面を見つめる。_
-
-大山
-「...そうだな」
-
-佐藤
-「飯田君が言ってました。『福井もすごいでしょって、胸を張って言えると思った』って」
-
-_大山、顔をこわばらせる。_
-
-大山
-「あいつは...純粋だ」
-
-佐藤
-「あなたも、13年前は同じだったんじゃないですか」
-
-大山
-「それは...違う」
-
-佐藤
-「城下町の復元。福井の歴史を伝えたい」
-
-_大山、頭を抱える。_
-
-大山
-「結局、私もARに頼ってた。技術で『魅力』を作ろうとしてた」
-
-大山
-「恐竜アトラクションを批判してたが、俺も同じだった。同じ穴のムジナだ」
-
-佐藤
-「でも、あなたは気づいた」
-
-大山
-「...何に？」
-
-佐藤
-「自分の矛盾に。」
-
-_沈黙。_
-
-佐藤
-「私には、その矛盾も羨ましいです」
-
-_大山、佐藤を見る。_
-
-大山
-「どういう意味だ？」
-
-佐藤
-「故郷がないから」
-
-_沈黙。_
-
-佐藤
-「それが羨ましい」
-
-_佐藤、声が震える。_
-
-大山
-「君は...」
-
-佐藤
-「だから理解したいんです」
-
-_大山、深く息をつく。_
-
-大山
-「自分が取り残されることが怖かった」
-
-_大山、ようやく本音を吐く。_
-
-大山
+「結局、自分が取り残されることが怖かっただけなんだ。」
 「13年前に作ったシステムが、自分の知らないところで進化して...自分がいなくても回っていく」
 
 _大山、手を握りしめる。_
 
 大山
-「技術者としての誇りか、ただの嫉妬か...もう分からない」
+「技術者としての誇りか、それともただの嫉妬か...もう分からない」
 
-_佐藤、大山を見つめる。_
-
-佐藤
-「でも、あなたには故郷がある」
-
-_大山、佐藤を見る。_
-
-佐藤
-「あなたが羨ましい。故郷を愛せることが。たとえ間違った方法でも」
-
-_大山、深く頭を下げる。_
-
-_二人、しばらく沈黙。_
+_遠くでパトカーのサイレンが聞こえる。_
 
 大山
 「ありがとう、美咲君。君は...正しい判断をしてくれた」
 
-_サイレンの音が近づいてくる。_
+_大山、立ち上がる。_
+
+佐藤
+「部長...」
 
 ## Scene 10 ニュース映像
 ### ○テレビのニュース映像
@@ -779,17 +635,16 @@ _テレビのニュース映像_
 アナウンサー
 「福井県のAR事業を巡るサイバー攻撃事件で、ホログラファイ・システムズの大山智久部長が逮捕されました」
 
-
 アナウンサー（V.O.）
-「大山容疑者は、不正アクセス禁止法違反、威力業務妨害罪、恐喝未遂罪の容疑で起訴される見通しです」
+「大山容疑者は、SiLeXシステムに不正アクセスし、県内のウェアラブルデバイス85万台を一斉にハイジャックした容疑で、不正アクセス禁止法違反、威力業務妨害罪、恐喝未遂罪の容疑で起訴される見通しです」
 
 _映像が切り替わり、県庁の記者会見の様子。_
 
 リベラ
-「この事件を受けまして、福井県はAR事業の大幅な縮小を決定いたしました」
+「この事件を受けまして、福井県は『SiLeX Glass』システムのセキュリティ対策を大幅に強化し、段階的にサービスを再開する方針を決定いたしました」
 
 アナウンサー（V.O.）
-「県は今後、AR技術に過度に依存しない、より安全で持続可能な観光政策に転換する方針です」
+「県は今後、外部セキュリティ機関との連携を強化し、システムの安全性が確認され次第、順次ARサービスを復旧させる予定です」
 
 ## Scene 11 ホログラファイ・システムズ社内
 ### ○社内・執務室（夕）
@@ -797,27 +652,81 @@ _映像が切り替わり、県庁の記者会見の様子。_
 _飯田、テレビを見上げる。_
 
 飯田
-「部長のこと、どう思います？」
-
-佐藤
-「......やったことは許されない」
-「動機は理解できるけどね」
+「段階的な再開...」
 
 _佐藤、段ボールにテープを貼る。_
 
 佐藤
-「でも、福井の人たちは強いわね。変化に順応して、前に進んでる」
+「よかったじゃない。あなたの技術が無駄にならずに済んだ」
+
+飯田
+「でも、今度は僕がセキュリティリーダーになるんです」
+
+_飯田、立ち上がる。_
+
+飯田
+「佐藤さんから学んだことを活かして、本当に安全なシステムを作りたい」
+
+佐藤
+「飯田君らしいわね」
 
 _佐藤、段ボールを持ち上げる。飯田が手伝う。_
+
+飯田
+「部長のこと、どう思います？」
+
+佐藤
+「......やったことは許されない」
+「でも、彼の想いも間違いではなかった」
+
+_佐藤、窓の外を見る。夕日に染まる福井の街。_
+
+佐藤
+「技術と人間の距離感って、難しいのね」
+
+飯田
+「だからこそ、僕らが責任を持たなきゃいけない」
+
+_佐藤、振り返る。_
+
+佐藤
+「『僕ら』？」
+
+飯田
+「佐藤さんが東京に戻っても、一緒に仕事をしたいんです」
+「リモートでも、セキュリティ面でアドバイスをもらえませんか？」
+
+_佐藤、少し驚く。_
+
+佐藤
+「本社の許可が出れば...」
+
+飯田
+「お願いします。福井の人たちが安心して使えるシステムを作りたいんです」
+
+_佐藤、微笑む。_
+
+佐藤
+「考えてみる」
+
+_二人、段ボールを運ぶ。_
 
 佐藤
 「それじゃあ」
 
 飯田
-「また機会があったら、福井に来てください」
+「今度は観光で福井に来てください」
 
 佐藤
-「今度は観光で」
+「システムが復旧したら、真っ先に恐竜を見に行くわ」
+
+飯田
+「その時は、僕が案内します。ARなしで」
+
+_佐藤、笑う。_
+
+佐藤
+「それもいいかもね」
 
 ## Scene 12 福井駅前
 ### ○福井駅前・バス停（夕）
@@ -839,6 +748,4 @@ _佐藤、小さく微笑む。_
 
 _バスのドアが閉まる音。_
 
-**フェードアウト**
-
-**エンド**
+**END**
