第一稿から第二稿への変更点を反映し、シーンごとの内容を大幅に修正。特にキャラクターの感情表現や会話内容を強化し、ストーリーの流れを改善。

--- a/脚本/「ウェアラブル」台本 第一稿→第二稿 差分比較.md
+++ b/脚本/「ウェアラブル」台本 第一稿→第二稿 差分比較.md
@@ -1,112 +1,48 @@
-# 「ウェアラブル」台本 第一稿→第二稿 差分比較
+## 第一稿から第二稿への変更点
 
-## 主な変更点
+### **Scene 1 福井駅前**
+- **冒頭部分の大幅削除**: 第一稿にあったニュース映像とホログラムモニターの導入シーンを完全削除
+- **佐藤の登場方法変更**: 駅から出てきて恐竜に驚くシーンに変更
+- **観光客のセリフ大幅簡略化**: 第一稿では詳細な技術説明があったが、第二稿では短縮
+- **子どもと恐竜の交流追加**: 恐竜が振り返って鳴くインタラクションを追加
 
-### 1. Scene 1 冒頭の大幅な変更
+### **Scene 3 ホログラファイ・システムズ社内**
+- **飯田の地元愛表現の変更**:
+  - 第一稿: 「観光とかでは東京も行きますけど、まあ地元、好きなんで」
+  - 第二稿: 「生まれも育ちも。昔は...眼鏡の街って言われてたんですけど」
+- **佐藤の反応追加**: 「地場産業の技術転換...上手くいった例ね」という技術的観点のコメント
 
-**第一稿**: ニュース映像から始まり、詳細な技術説明と観光客の反応が豊富
-- テレビニュースでSiLeX Glassの説明から開始
-- 複数の観光客（外国人を含む）の詳細な反応
-- 技術的な説明が多数含まれる
+### **Scene 4 福井駅前・人込み**
+- **観光客キャラクターの名前変更**: 第一稿の「観光客E、F」等から第二稿では「大学生A、B」「会社員」「地元住民A、B」等により具体的な属性を持つ名前に変更
+- **セリフの微調整**: 「眼鏡が壊れた？」→「なんだよこれ...眼鄉が壊れた？」等
 
-**第二稿**: 佐藤の視点から直接的に開始
-- ニュース映像部分を削除
-- 観光客の台詞を大幅に削減
-- よりシンプルで映画的な導入に変更
+### **Scene 6 ホログラファイ・システムズ社内**
+- **飯田の感情表現の強化**:
+  - 第一稿: 「みんな楽しみにしてるんです」
+  - 第二稿: 感情的になって涙を流すシーンを追加、より詳細な地元愛の表現
+- **大山の退場シーンの変更**: 第一稿では「警察のサイバー犯罪対策課が来る」という説明があったが、第二稿では「警察立会いで正式な解析」「現場保全が最優先」に変更
 
-### 2. Scene 3 会話内容の変更
+### **Scene 7 24時間営業のコンビニ**
+- **会話内容の大幅変更**:
+  - 第一稿: 金額の意味について分析的な会話
+  - 第二稿: 佐藤の転勤族としての孤独感と飯田の地元愛の対比に焦点を当てた感情的な会話
+- **佐藤の内面描写強化**: 「毎日通る道。毎日会う人。『お疲れさま』って言ってくれる人」等の具体的な憧れの表現
 
-**第一稿**:
-```
-飯田「観光とかでは東京も行きますけど、まあ」
-飯田「地元、好きなんで」
-佐藤「今すごいもんね、駅前」
-飯田「そうなんです！あの恐竜とか...」
-```
+### **Scene 8 回想シーン**
+- **時期の変更**: 第一稿「15年前」→第二稿「13年前」
+- **内容の大幅変更**:
+  - 第一稿: リベラとの会話シーンで技術説明
+  - 第二稿: 大山一人でコードを書く静的なシーン、メモ帳の内容描写
 
-**第二稿**:
-```
-飯田「生まれも育ちも。昔は...」
-飯田「眼鏡の街って言われてたんですけど」
-佐藤「地場産業の技術転換...上手くいった例ね」
-```
+### **Scene 9/10 足羽川・ベンチ**
+- **佐藤の推理方法変更**: 第一稿では「13年前のシステム開発時のアクセスログ」、第二稿では「13年前のコードと、今回の侵入手法が一致」
+- **大山の動機説明の変更**:
+  - 第一稿: 県民の技術依存への懸念が中心
+  - 第二稿: 技術者としての嫉妬と取り残される恐怖が中心
+- **飯田の成長エピソード追加**: 第二稿では飯田がリベラに直談判してフェス中止を提言したという情報を追加
 
-**変更の意図**: より地域の歴史と技術転換に焦点を当てた会話に変更
-
-### 3. Scene 6 飯田の感情表現の強化
-
-**第一稿**: 感情的になる場面が簡潔
-```
-飯田「ふざけるな！」
-（中略）
-飯田「犯人が誰だか分からないけど、絶対に―」
-```
-
-**第二稿**: より詳細で感情的な描写
-```
-飯田「みんな楽しみにしてるんです」
-（立ち上がる、椅子が倒れる）
-飯田「ふざけるな！」
-（机を叩く）
-飯田「何の権利があって！」
-（涙の描写）
-飯田「いつも我慢してきたんだ」
-飯田「『福井なんて何もない』って言われても、言い返せなかった」
-```
-
-**変更の意図**: 飯田の地元愛と屈辱感をより深く描写
-
-### 4. Scene 7 コンビニでの会話の大幅変更
-
-**第一稿**: 事件の分析と推理が中心
-- 152億円の意味について推理
-- 犯人の動機について議論
-- より謎解き要素が強い
-
-**第二稿**: 個人的な感情と背景に焦点
-```
-佐藤「地元愛って、どんな感じ？」
-飯田「特別なことじゃないです。朝、同じ道を通って。夜、同じ道を帰る」
-佐藤「私、それが欲しかった」
-佐藤「転勤族の子供だから...」
-```
-
-**変更の意図**: キャラクターの内面により深く迫る構成に変更
-
-### 5. Scene 8の位置と内容の変更
-
-**第一稿**: 15年前の回想として大山の理想を描写
-**第二稿**: 13年前の回想に変更し、より簡潔に
-
-### 6. Scene 9 大山の動機説明の変更
-
-**第一稿**:
-- 父の形見の眼鏡という要素
-- より詳細な技術者としての葛藤
-- リベラへの評価も含む
-
-**第二稿**:
-- 父の眼鏡要素を削除
-- よりシンプルに技術者の孤独感に焦点
-- 「技術者としての誇りか、それともただの嫉妬か」の台詞を維持
-
-### 7. Scene 10-11 結末の変更
-
-**第一稿**: AR事業の大幅縮小で終了
-```
-リベラ「この事件を受けまして、福井県は『SiLeX Glass』を含むAR事業の大幅な縮小を決定いたしました」
-```
-
-**第二稿**: 段階的再開への転換
-```
-リベラ「『SiLeX Glass』システムのセキュリティ対策を大幅に強化し、段階的にサービスを再開する方針を決定いたしました」
-```
-
-### 8. Scene 11 佐藤と飯田の関係性
-
-**第一稿**: 簡潔な別れ
-**第二稿**: 継続的な協力関係の示唆
-```
-飯田「佐藤さんが東京に戻っても、一緒に仕事をしたいんです」
-飯田「リモートでも、セキュリティ面でアドバイスをもらえませんか？」
-```
+### **Scene 10/11 ニュース映像とその後**
+- **県の対応方針の大幅変更**:
+  - 第一稿: 「AR事業の大幅な縮小」
+  - 第二稿: 「セキュリティ対策を強化し、段階的にサービスを再開」
+- **飯田との会話内容変更**: 第一稿では短いやり取りだったが、第二稿では佐藤の今後の関わり方について言及
