シーン2のリベラのセリフを修正し、自然な会話に改善。

--- a/脚本/短編映画「ウェアラブル」台本_第二稿.md
+++ b/脚本/短編映画「ウェアラブル」台本_第二稿.md
@@ -56,7 +56,7 @@ _福井の街を見下ろす窓際に、四人が座っている。_
 _佐藤、スーツの胸元のホログラファイ・システムズのバッジを軽く示す。_
 
 リベラ
-「福井県庁AR推進担当のアナ・リベラです。よろしくお願いします」
+「福井県庁AR推進担当のアナ・リベラです。」
 
 _名刺交換をする両名。_
 
